rhai/codegen/ui_tests/rhai_mod_return_raw.stderr
error: unknown attribute 'return_raw'
  --> ui_tests/rhai_mod_return_raw.rs:11:12
   |
11 | #[rhai_mod(return_raw = "yes")]
   |            ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> ui_tests/rhai_mod_return_raw.rs:24:8
   |
24 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
